[package]
name = "abc004"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc004-a", problem = { platform = "atcoder", contest = "abc004", index = "A", url = "https://atcoder.jp/contests/abc004/tasks/abc004_1" } }
b = { name = "abc004-b", problem = { platform = "atcoder", contest = "abc004", index = "B", url = "https://atcoder.jp/contests/abc004/tasks/abc004_2" } }
c = { name = "abc004-c", problem = { platform = "atcoder", contest = "abc004", index = "C", url = "https://atcoder.jp/contests/abc004/tasks/abc004_3" } }
d = { name = "abc004-d", problem = { platform = "atcoder", contest = "abc004", index = "D", url = "https://atcoder.jp/contests/abc004/tasks/abc004_4" } }

[[bin]]
name = "abc004-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc004-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc004-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc004-d"
path = "src/bin/d.rs"
[dependencies]
