[package]
name = "abc008"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc008-a", problem = { platform = "atcoder", contest = "abc008", index = "A", url = "https://atcoder.jp/contests/abc008/tasks/abc008_1" } }
b = { name = "abc008-b", problem = { platform = "atcoder", contest = "abc008", index = "B", url = "https://atcoder.jp/contests/abc008/tasks/abc008_2" } }
c = { name = "abc008-c", problem = { platform = "atcoder", contest = "abc008", index = "C", url = "https://atcoder.jp/contests/abc008/tasks/abc008_3" } }
d = { name = "abc008-d", problem = { platform = "atcoder", contest = "abc008", index = "D", url = "https://atcoder.jp/contests/abc008/tasks/abc008_4" } }

[[bin]]
name = "abc008-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc008-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc008-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc008-d"
path = "src/bin/d.rs"
[dependencies]
