[package]
name = "abc009"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc009-a", problem = { platform = "atcoder", contest = "abc009", index = "A", url = "https://atcoder.jp/contests/abc009/tasks/abc009_1" } }
b = { name = "abc009-b", problem = { platform = "atcoder", contest = "abc009", index = "B", url = "https://atcoder.jp/contests/abc009/tasks/abc009_2" } }
c = { name = "abc009-c", problem = { platform = "atcoder", contest = "abc009", index = "C", url = "https://atcoder.jp/contests/abc009/tasks/abc009_3" } }
d = { name = "abc009-d", problem = { platform = "atcoder", contest = "abc009", index = "D", url = "https://atcoder.jp/contests/abc009/tasks/abc009_4" } }

[[bin]]
name = "abc009-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc009-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc009-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc009-d"
path = "src/bin/d.rs"
[dependencies]
