[package]
name = "abc011"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc011-a", problem = { platform = "atcoder", contest = "abc011", index = "A", url = "https://atcoder.jp/contests/abc011/tasks/abc011_1" } }
b = { name = "abc011-b", problem = { platform = "atcoder", contest = "abc011", index = "B", url = "https://atcoder.jp/contests/abc011/tasks/abc011_2" } }
c = { name = "abc011-c", problem = { platform = "atcoder", contest = "abc011", index = "C", url = "https://atcoder.jp/contests/abc011/tasks/abc011_3" } }
d = { name = "abc011-d", problem = { platform = "atcoder", contest = "abc011", index = "D", url = "https://atcoder.jp/contests/abc011/tasks/abc011_4" } }

[[bin]]
name = "abc011-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc011-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc011-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc011-d"
path = "src/bin/d.rs"
[dependencies]
