[package]
name = "abc015"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc015-a", problem = { platform = "atcoder", contest = "abc015", index = "A", url = "https://atcoder.jp/contests/abc015/tasks/abc015_1" } }
b = { name = "abc015-b", problem = { platform = "atcoder", contest = "abc015", index = "B", url = "https://atcoder.jp/contests/abc015/tasks/abc015_2" } }
c = { name = "abc015-c", problem = { platform = "atcoder", contest = "abc015", index = "C", url = "https://atcoder.jp/contests/abc015/tasks/abc015_3" } }
d = { name = "abc015-d", problem = { platform = "atcoder", contest = "abc015", index = "D", url = "https://atcoder.jp/contests/abc015/tasks/abc015_4" } }

[[bin]]
name = "abc015-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc015-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc015-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc015-d"
path = "src/bin/d.rs"
[dependencies]
